projet_gl/src/test/deca/context/valid/0_01/0_01_Identifier_Float.deca
// Description:
//    Programme test si l'identifier est bien déclaré pour float
//
// Resultats:
//
// Historique:
//    cree le 09/01/2024

{
        float a;
        float b;
        a = b;
}
